# axcer

./: .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: COMMIT_MESSAGE_GUIDELINE.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_update.yml  feature_request.yml
.github/workflows/: test.yml
axcer/: __init__.py  process.py  tokenizer.py  utils.py
axcer/constants/: question_words.py  stop_words.txt
axcer/experiments/utils/: field_parser.py  parse_dataset.py  prepare_dataset.py
axcer/graph/: __init__.py  graph_process.py  visualizer.py
axcer/utils/: __init__.py  custom_logger.py  load_stopwords.py  metrics_helper.py
experiments/: apply_filter.py  dataset_config.py  download_and_move_datasets.bash  download_datasets.py
experiments/constants/: dataset_map.py  force_tokens.py  paths.py  system_prompts.py
experiments/evaluation/: axcer_compression.py
experiments/modals/: llmlingua2_evaluate.bash  llmlingua2_evaluate.py  selective_context_evaluate.bash  selective_context_evaluate.py  vllm_evaluate.bash  vllm_evaluate.py  vllm_inference_for_scitldr_summary.py  vllm_inference_scitldr_summarization.bash
experiments/utils/: dataset_helper.py  difference_identifier.py  field_parser.py  format_mawps.py  modal_csv_results_helper.py  parse_dataset.py  prepare_dataset.py  qa_field_separator.py  results_helper.py
tests/: test.csv  test_apostrophe_rule.py  test_compress_prompt.py
tests/lingua2/: lingua_modal.py
tests/selective_context/: local_main.py  main.py
(+31 files in other folders)
